--- a/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
@@ -214,7 +214,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="online_delivery text-center">
-					<div class="delivery_bike"><img src="images/shop-items/delivery.png" alt="delivery.png"></div>
+					<div class="delivery_bike"><img src="~/Images/shop-items/shipper.png"></div>
 					<h3 class="title text-thm2">
 						<span class="flaticon-whatsapp text-thm vam mr15"></span>WHATSAPP ORDERING
 						SERVICE – PLACE YOUR ORDERS AT <span class="text-thm">392 96 32</span>
