--- a/SuperMarket_Client/wwwroot/Asset/css/style.css
+++ b/SuperMarket_Client/wwwroot/Asset/css/style.css
@@ -20158,7 +20158,7 @@ canvas#myChart{
   background-color: #fff;
   border: 1px solid #EBEBEB;
   border-radius: 4px;
-  height: 553px;
+/*  height: 553px;*/
   opacity: 0;
   position: relative;
   top: 0px;
