--- a/SuperMarket_Client/Areas/Customer/Views/StoreLocator/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/StoreLocator/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model SuperMarket_Models.Models.Branch
 <div>
-	<h2>Closest Location Recommend: </h2>
+	<h2>Closest Location Recommendation: </h2>
 </div>
 <div class="mb30">
-	<button type="button" class="btn btn-primary"> @Model.BranchName, @Model.Address</button>
+	<button type="button" class="btn btn-primary"> @Model.BranchName</button>
 </div>  
 
 
