--- a/SuperMarket_Client/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,11 +4,12 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
+
+<div class="row">
+    <div class="col-4 offset-4 login_form">
+        <h1>@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
-<div class="row">
-    <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -16,7 +17,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-log btn-thm">Reset Password</button>
         </form>
     </div>
 </div>
