--- a/SuperMarket_Client/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/Login.cshtml
@@ -4,11 +4,13 @@
 @{
     ViewData["Title"] = "Log in";
 }
+
+
 <div class="row">
     <div class="col-4 offset-4">
-        <section>
+        <section class="login_form">
             <form id="account" method="post">
-                <h2>Use a local account to log in.</h2>
+                <h1 class="text-center">Sign In</h1>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
@@ -22,26 +24,27 @@
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div>
-                    <div class="checkbox">
+                    <div class="checkbox" style="display:flex;justify-content:space-between;">
                         <label asp-for="Input.RememberMe" class="form-label">
                             <input class="form-check-input" asp-for="Input.RememberMe" />
                             @Html.DisplayNameFor(m => m.Input.RememberMe)
                         </label>
+
+                         <label class="btn-fpswd float-end">
+                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                        </label>
                     </div>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-log btn-thm mt10 mb10">Sign In</button>
                 </div>
-                <div>
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                    <p>
-                        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </p>
+                <div style="display:flex;justify-content:space-between;" class="mt15">
+                    <label>
+                        <a class="btn-fpswd float-end" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                    </label>
+                    <label>
+                        <a class="btn-fpswd float-end" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                    </label>
                 </div>
             </form>
         </section>
