--- a/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/Checkout.cshtml
@@ -139,7 +139,7 @@
                     <div class="ui_kit_radiobox checkout">
                         <div class="radio">
                             <input id="radio_seven" name="radio" type="radio" checked>
-                            <label for="radio_seven"><span class="radio-label"></span> PayPal What is PayPal? <img src="/Asset/images//resource//payment.png" alt="payment.png"></label>
+                            <label for="radio_seven"><span class="radio-label"></span>  <img src="/Asset/images//resource//payment.png" alt="payment.png"></label>
                         </div>
                     </div>
                     <div class="ui_kit_button payment_widget_btn">
