--- a/SuperMarket_Client/Areas/Customer/Views/Cart/CompleteOrder.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Cart/CompleteOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SuperMarket_Models.ViewModels.OrderVM
 
  <!-- Inner Page Breadcrumb -->
-  <section class="inner_page_breadcrumb">
+  <section class="inner_page_breadcrumb mb40">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-7 justify-content-center">
@@ -16,6 +16,7 @@
       </div>
     </div>
   </section>
+
 
 <div class="tab-pane fade show active" id="prder" role="tabpanel" aria-labelledby="prder-tab">
     <div class="row justify-content-center">
