--- a/SuperMarket_Client/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -5,10 +5,10 @@
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h1 class="text-center mb20">@ViewData["Title"]</h1>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-4 offset-4  login_form">
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -26,7 +26,7 @@
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-log btn-thm">Update password</button>
         </form>
     </div>
 </div>
