--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -48,10 +48,10 @@
 				var controllerName = this.ViewContext.RouteData.Values["controller"].ToString();
 				if (@Context.Session.GetInt32("branchId") == null && controllerName != "Customer")
 				{
-										<div class="popup_onload_modal">
-											@await Component.InvokeAsync("BranchList")
-										</div>
-										<input type="hidden" id="checkSessionBranchId" value="1" />
+												<div class="popup_onload_modal">
+													@await Component.InvokeAsync("BranchList")
+												</div>
+												<input type="hidden" id="checkSessionBranchId" value="1" />
 
 				}
 			}
@@ -264,7 +264,7 @@
 		</header>
 
 		<!-- ==================================================================================================================== -->
-		<section class="container">
+		<section class="container-fluid" style="padding-right:0;padding-left:0;">
 			<main role="main" class="pb-3">
 				<partial name="_Notification" />
 				@RenderBody()
@@ -327,7 +327,7 @@
 								<li class="text-white df"><span class="flaticon-phone-call"></span><a class="phone" href="#">037 340 5298</a></li>
 								<li class="text-white"><a href="#">Monday - Friday : 9:00 - 20:00</a></li>
 								<li class="text-white"><a href="#">Saturday: 11:00 - 14:00</a></li>
-								<li class="text-white"><span class="flaticon-email"></span><a href="#">oder@freshen.com</a></li>
+								<li class="text-white"><span class="flaticon-email"></span><a href="#">ktkstore2022@gmail.com</a></li>
 							</ul>
 						</div>
 					</div>
@@ -353,12 +353,7 @@
 						<div class="footer_qlink_widget">
 							<h4>OUR STORES</h4>
 							<ul class="list-unstyled">
-								<li><a href="#">New York</a></li>
-								<li><a href="#">London SF</a></li>
-								<li><a href="#">Cockfosters BP</a></li>
-								<li><a href="#">Los Angeles</a></li>
-								<li><a href="#">Chicago</a></li>
-								<li><a href="#">Las Vegas</a></li>
+								@await Component.InvokeAsync("BranchList_Footer")
 							</ul>
 						</div>
 					</div>
@@ -369,7 +364,7 @@
 				<div class="row">
 					<div class="col-md-6 col-lg-8 col-xl-9">
 						<div class="copyright-widget mb15-767">
-							<p>© 2021 Freshen. Made with love.</p>
+							<p>© 2022 KTK. Made with love.</p>
 						</div>
 					</div>
 					<div class="col-md-6 col-lg-4 col-xl-3">
