test add cate img

--- a/SuperMarket_Client/Views/Shared/Components/CategoryList/CategoryList.cshtml
+++ b/SuperMarket_Client/Views/Shared/Components/CategoryList/CategoryList.cshtml
@@ -5,7 +5,7 @@
 {
 	<li>
 		<a href="#">
-			<span class="menu-icn flaticon-fish"></span>
+			<span><img src="@item.CategoryImg" width="30px" /></span>
 			<span class="menu-title">@item.CategoryName</span>
 		</a>
 	</li>
