--- a/SuperMarket_Client/Areas/Admin/Views/Product/CreateProduct.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/CreateProduct.cshtml
@@ -69,7 +69,7 @@
 
 			</div>
 			<div class="form-group  py-2 col-6">
-				<label class="control-label">Side Image</label>
+				<label class="control-label">Side Image (*multiple image)</label>
 				<input class="form-control" type="file" name="sideImage" onchange="return PreviewSideImg()" id="multipleImg" multiple required />
 
 			</div>
