--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -252,7 +252,7 @@
 						<li>
 							<a asp-action="AboutUs" asp-controller="Customer" asp-area="Customer"><span class="title">ABOUT US</span></a>
 						</li>
-						<li><a asp-action="Contact" asp-controller="Customer" asp-area="Customer">CONTACT</a></li>
+						<li><a asp-action="Contact" asp-controller="Home" asp-area="Customer">CONTACT</a></li>
 					</ul>
 					<ul id="respMenu2" class="ace-responsive-menu widget_menu_home2 wa" data-menu-style="horizontal">
 						<li class="list-inline-item list_c">
