--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -250,7 +250,7 @@
 							</ul>
 						</li>
 						<li>
-							<a asp-action="AboutUs" asp-controller="Customer" asp-area="Customer"><span class="title">ABOUT US</span></a>
+							<a asp-action="AboutUs" asp-controller="Home" asp-area="Customer"><span class="title">ABOUT US</span></a>
 						</li>
 						<li><a asp-action="Contact" asp-controller="Customer" asp-area="Customer">CONTACT</a></li>
 					</ul>
