--- a/SuperMarket_Client/Areas/Customer/Views/Home/AboutUs.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Home/AboutUs.cshtml
@@ -6,8 +6,8 @@
 					<div class="breadcrumb_content">
 						<h2 class="breadcrumb_title">About us</h2>
 						<ol class="breadcrumb">
-					    <li class="breadcrumb-item"><a href="#">Home</a></li>
-					    <li class="breadcrumb-item active" aria-current="page">About us</li>
+					    @*<li class="breadcrumb-item"><a href="#">Home</a></li>
+					    <li class="breadcrumb-item active" aria-current="page">About us</li>*@
 						</ol>
 					</div>
 				</div>
