Change Save branchId and branchName to cookie instead of session

--- a/SuperMarket_Client/Views/Shared/Components/BranchList/BranchList.cshtml
+++ b/SuperMarket_Client/Views/Shared/Components/BranchList/BranchList.cshtml
@@ -21,7 +21,7 @@
 									</div>
 								</div>
 								<div class="footer_social_widget">
-									<form class="footer_mailchimp_form mb10" method="post" asp-action="CreateSession" asp-controller="Home" asp-area="Customer">
+									<form class="footer_mailchimp_form mb10" method="post" asp-action="CreateCookieForBrachId" asp-controller="Home" asp-area="Customer">
 										<div class="row align-items-center">
 											<select class="form-select form-select-lg mb-3" id="selectModalPopup" aria-label=".form-select-lg example" name="selectBranch">
 												<option>Select the branch</option>
