--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -103,28 +103,10 @@
 						</div>
 					</div>
 					<div class="col-lg-7 col-xl-7">
-						<div class="header_middle_advnc_search">
+						<div class="header_middle_advnc_search ">
 							<div class="search_form_wrapper">
 								<div class="row">
-									<div class="col-auto pr0">
-										<div class="actegory">
-											<select class="custom_select_dd" id="selectbox_alCategory">
-												<option value="AllCategory">All Category</option>
-												<option value="HotOffers">Hot Offers</option>
-												<option value="NewArrivals">New Arrivals</option>
-												<option value="DealsOfTheDay">Deals of The Day</option>
-												<option value="Fruits">Fruits</option>
-												<option value="Vegetables">Vegetables</option>
-												<option value="Drinks">Drinks</option>
-												<option value="Bakery">Bakery</option>
-												<option value="Butter&Egges">Butter & Egges</option>
-												<option value="Milks&Creams">Milks & Creams</option>
-												<option value="Meats">Meats</option>
-												<option value="Fish">Fish</option>
-											</select>
-										</div>
-									</div>
-									<div class="col-auto pr0">
+									<div class="col-auto">
 										<div class="top-search">
 											<form action="#" method="get" class="form-search" accept-charset="utf-8">
 												<div class="box-search pre_line">
@@ -166,7 +148,7 @@
 											</form><!-- /.form-search -->
 										</div><!-- /.top-search -->
 									</div>
-									<div class="col-auto p0">
+									<div class="col-auto">
 										<div class="advscrh_frm_btn">
 											<button type="submit" class="btn search-btn"><span class="flaticon-search"></span></button>
 										</div>
