--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -110,7 +110,7 @@
 										<div class="top-search">
 											<form action="#" method="get" class="form-search" accept-charset="utf-8">
 												<div class="box-search pre_line">
-													<input class="form_control" type="text" style="border-radius: 4px;border: 1px solid #ebebeb;" name="search" placeholder="I'm shopping for...">
+													<input class="form_control" autocomplete="off" type="text" style="border-radius: 4px;border: 1px solid #ebebeb;" name="search" placeholder="I'm shopping for...">
 													<div class="search-suggestions">
 														<div class="box-suggestions">
 															@if (Context.Request.Cookies["branchId"] != null)
